style:css values updated

--- a/src/Landing/landingPage.css
+++ b/src/Landing/landingPage.css
@@ -24,3 +24,228 @@
     width: 50%;
     margin: 2.5rem;
   }
+
+/* typography */
+
+  .text-left {
+    text-align: left;
+}
+
+
+/* reset */
+
+:root {
+    --primary-color: #084c61;
+    --secondary-color: #de4e48;
+    --new-color:#dd645b;
+
+    --primary-light:#90dfd0;
+    --primary-lighter:#e6f7f4;
+    --primary-dark:##084c61;
+    --primary-darker:#dc3f34;
+
+    --secondary-light:#b5b8c2;
+    --secondary-lighter:#dfe2ec;
+    --secondary-dark:#dc3f34;
+    --secondary-darker:#161d32;
+
+    --text-color: #0c080c;
+    --accent-color: #af7a6d;
+    --bg-color: #ffffff;
+    --alt-text-color: #d10d90;
+    --complement-btn-text-color: #ffffff;
+    --error-color:#da0303;
+    --error-dark-color:#bb0f0f;
+    --error-light-color:#eb9393;
+    --success-color:#0a8d0a;
+    --success-light-color:#6ccf6c;
+    --success-dark-color:#096209;
+
+    --yellow-color:#ffb400;
+    --yellow-light: #ffd675;
+
+    /* sizing */
+    --size-82: 10rem;
+    --size-78: 5rem;
+    --size-74: 4.75rem;
+    --size-72: 4.5rem;
+    --size-68: 4.25rem;
+    --size-64: 4rem;
+    --size-60: 3.75rem;
+    --size-56: 3.5rem;
+    --size-52: 3.25rem;
+    --size-48: 3rem;
+    --size-44: 2.75rem;
+    --size-40: 2.5rem;
+    --size-36: 2.25rem;
+    --size-32: 2rem;
+    --size-28: 1.75rem;
+    --size-24: 1.5rem;
+    --size-20: 1.25rem;
+    --size-16: 1rem;
+    --size-14: 0.875rem;
+    --size-12: 0.75rem;
+    --size-10: 0.625rem;
+    --size-8: 0.5rem;
+    --size-6: 0.375rem;
+    --size-4: 0.25rem;
+    --size-2: 0.125rem;
+    --size-1: 1px;
+    --size-0: 0;
+}
+
+
+.primary-text-color {
+    color: var(--primary-color);
+}
+
+
+
+/* Padding */
+.px-8 {
+    padding-right: 8px;
+    padding-left: 8px;
+  }
+  
+  .px-16 {
+    padding-right: var(--size-16);
+    padding-left: var(--size-16);
+  }
+  
+  .px-32 {
+    padding-right: var(--size-32);
+    padding-left: var(--size-32);
+  }
+  
+  .px-64 {
+    padding-right: var(--size-64);
+    padding-left: var(--size-64);
+  }
+  
+  .py-8 {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  
+  .py-16 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  
+  .py-32 {
+    padding-top: var(--size-32);
+    padding-bottom: var(--size-32);
+  }
+  
+  .py-64 {
+    padding-top: var(--size-64);
+    padding-bottom: var(--size-64);
+  }
+  
+  /* Margin */
+  .mx-8 {
+    margin-right: var(--size-8);
+    margin-left: var(--size-8);
+  }
+  
+  .mx-16 {
+    margin-right: var(--size-16);
+    margin-left: var(--size-16);
+  }
+  
+  .my-8 {
+    margin-top: var(--size-8);
+    margin-bottom: var(--size-8);
+  }
+  
+  .my-16 {
+    margin-top: var(--size-16);
+    margin-bottom: var(--size-16);
+  }
+  
+  .my-32 {
+    margin-top: var(--size-32);
+    margin-bottom: var(--size-32);
+  }
+  
+  .my-48 {
+    margin-top: var(--size-48);
+    margin-bottom: var(--size-48);
+  }
+  
+  .mx-auto {
+    margin: 0 auto;
+  }
+  
+  .ml-auto {
+    margin-left: auto;
+  }
+  
+  .mr-auto {
+    margin-right: auto;
+  }
+  
+  .mt-auto {
+    margin-top: auto;
+  }
+  .mb-auto {
+    margin-bottom: auto;
+  }
+  
+  .ml-16 {
+    margin-left: var(--size-16);
+  }
+  
+  .ml-32 {
+    margin-left: var(--size-32);
+  }
+  
+  .ml-64 {
+    margin-left: var(--size-64);
+  }
+  
+  .mr-sm {
+    margin-right: var(--size-8);
+  }
+  
+  .mr-16 {
+    margin-right: var(--size-16);
+  }
+  
+  .mr-32 {
+    margin-right: var(--size-32);
+  }
+  
+  .mr-64 {
+    margin-right: var(--size-64);
+  }
+  
+  .primary-color {
+    color: var(--primary-color);
+  }
+  
+  .position-absolute {
+    position: absolute;
+  }
+  
+  .position-relative {
+    position: relative;
+  }
+  
+  .display-flex-row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .display-flex-column {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .align-items-center{
+    align-items: center;
+  }
+  
+  .align-items-baseline{
+    align-items: baseline;
+  }
