--- a/src/Landing/landingPage.css
+++ b/src/Landing/landingPage.css
@@ -99,6 +99,10 @@
     color: var(--primary-color);
 }
 
+.secondary-text-color {
+    color: var(--secondary-color);
+}
+
 
 
 /* Padding */
@@ -249,3 +253,29 @@
   .align-items-baseline{
     align-items: baseline;
   }
+
+
+
+  /* .btn {
+    margin: 0.3rem;
+  } */
+
+  .btn {
+    margin: 0.2rem 0.3rem;
+    height: fit-content;
+    width: 100%;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    display: inline-block;
+    border: none;
+}
+
+.primary-btn {
+    color: var(--complement-btn-text-color);
+    background-color: var(--secondary-color);
+}
+
+.secondary-btn {
+    color: var(--secondary-color);
+    background-color: var(--primary-lighter);
+}
